src/objects/TRAK_Test__c.object
<CustomObject>
    <description>Business Description: This object is used to record the tests which have been executed. 

Each test is a copy of a &quot;Test Template&quot; which has been set up by a Test Manager or other Test Script writer. 

Tests are created by the system automatically when a user is added to the Testers Related list on a Test Template.

Used In: Release Tracker App</description>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>This field will capture the date and time when Test Execution gets approved: Created on 30/07/2014 by Himanshu Babaria : TRAK</description>
        <inlineHelpText>Date this has been approved by SME</inlineHelpText>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>This field will capture the status of approval for Test Execution records. It will be auto-populated through the workflow process: Created on 30/07/2014 by Himanshu Babaria :TRAK</description>
        <inlineHelpText>The status of the approval. This is auto populated as the Test Execution goes through the process.</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Pending Approval</fullName>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field will capture the name of the approver for approving Test Executions: Created on 30/07/2014 by Himanshu Babaria :TRAK</description>
        <inlineHelpText>Your approval indicates that the test was properly documented, the documented test results support the overall pass or fail status of the test case or script and the test cases/scripts are accurate, complete and meet the requirements of LQP-302-18</inlineHelpText>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Which user ran this test</inlineHelpText>
        <label>Tester</label>
        <referenceTo>User</referenceTo>
        <relationshipName>TRAK_Test_Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <formula>Template__r.Title__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The description of this text script</inlineHelpText>
        <label>Test Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Environment__c</fullName>
        <description>Enter the environment that this test was performed in</description>
        <inlineHelpText>Enter the environment that this test was performed in</inlineHelpText>
        <label>Environment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Dev</fullName>
                </value>
                <value>
                    <fullName>CI</fullName>
                </value>
                <value>
                    <fullName>SAT</fullName>
                </value>
                <value>
                    <fullName>UAT</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Introduction__c</fullName>
        <formula>Template__r.Introduction__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>What is the overall aim of this test</inlineHelpText>
        <label>Introduction</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locked_For_editing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Locked For editing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Overall_Test_Comments__c</fullName>
        <inlineHelpText>Overall test comments. 

You should note what happened in the test, e.g. for promotion creation &quot;Succesfully created promotion&quot;.

This can be copy and pasted from the excel file.</inlineHelpText>
        <label>Overall Test Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Pass_Percentage__c</fullName>
        <formula>Steps_Passed__c / Total_Steps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of all steps that are passed or passed with minor issues</inlineHelpText>
        <label>Pass Percentage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Recall_Flag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recall Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Signature_Meaning__c</fullName>
        <defaultValue>&quot;Test Execution is complete and accurately tests the functionality of the related User Story,and that the test was properly documented and supports the overall pass or fail status of the test case. This Test Execution complies with LQP-302-18.&quot;</defaultValue>
        <label>Signature Meaning</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SprintNew__c</fullName>
        <formula>User_Story__r.Allocated_Sprint__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sprint</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sprint__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sprint</label>
        <referenceTo>TRAK_Sprint__c</referenceTo>
        <relationshipLabel>Test Executions</relationshipLabel>
        <relationshipName>TRAK_Test_Executions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <inlineHelpText>The stage in the test lifecycle. A test case can be Status=Complete and fOutcome=&quot;Failed&quot; if a bug has been raised. Once the bug has been fixed the test case may be set to &quot;Awaiting Retest&quot; by the Test Lead</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Started</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
                <value>
                    <fullName>Awaiting Retest</fullName>
                </value>
                <value>
                    <fullName>Parked</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Steps_Completed__c</fullName>
        <inlineHelpText>Sums the number of steps who&apos;s outcome is not N/A</inlineHelpText>
        <label>Steps Completed</label>
        <summaryFilterItems>
            <field>TRAK_Test_Steps__c.Outcome__c</field>
            <operation>notEqual</operation>
            <value>TBC</value>
        </summaryFilterItems>
        <summaryForeignKey>TRAK_Test_Steps__c.Test__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Steps_Passed__c</fullName>
        <inlineHelpText>The total number of steps passed or  passed with minor issues</inlineHelpText>
        <label>Steps Passed</label>
        <summaryFilterItems>
            <field>TRAK_Test_Steps__c.Outcome__c</field>
            <operation>equals</operation>
            <value>Pass, Passed with issues, N/A</value>
        </summaryFilterItems>
        <summaryForeignKey>TRAK_Test_Steps__c.Test__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Submitter__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Submitter</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Test_Executions1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The script being executed</inlineHelpText>
        <label>Template</label>
        <referenceTo>TRAK_Test_Templates__c</referenceTo>
        <relationshipName>TRAK_Test</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Test_Completion__c</fullName>
        <formula>Steps_Completed__c / Total_Steps__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>The percentage of steps that have an outcome not equal to &apos;N/A&apos;</inlineHelpText>
        <label>Test Completion</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Test_Execution_Date__c</fullName>
        <description>TRAK Sprint 2: This field is created as a part of User Story US-35859. This field will capture the date when the Test was executed.</description>
        <inlineHelpText>Date when the Test execution was last run</inlineHelpText>
        <label>Test Execution Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Test_Outcome__c</fullName>
        <inlineHelpText>The overall outcome of the test at it&apos;s current stage</inlineHelpText>
        <label>Test Outcome</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Passed</fullName>
                </value>
                <value>
                    <fullName>Passed with minor issues</fullName>
                </value>
                <value>
                    <fullName>Failed</fullName>
                </value>
                <value>
                    <fullName>Blocked from testing</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test_Phase__c</fullName>
        <label>Test Phase</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Sprint Test</fullName>
                </value>
                <value>
                    <fullName>User Acceptance Test</fullName>
                </value>
                <value>
                    <fullName>Stability Test</fullName>
                </value>
                <value>
                    <fullName>Regression Test</fullName>
                </value>
                <value>
                    <fullName>Performance Test</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Steps__c</fullName>
        <inlineHelpText>The total number of steps in this test</inlineHelpText>
        <label>Total Steps</label>
        <summaryForeignKey>TRAK_Test_Steps__c.Test__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>User_Story__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User Story</label>
        <referenceTo>TRAK_User_Story__c</referenceTo>
        <relationshipName>TRAK_Tests</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Test Execution</label>
    <listViews>
        <fullName>All_Records</fullName>
        <columns>NAME</columns>
        <columns>Assigned_To__c</columns>
        <columns>Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Records</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Test Execution Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Test Executions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Lock_Down_Approved_Record</fullName>
        <active>false</active>
        <description>Lock the test execution record once approved: Created by Preeti Grover on 19/08/2014:TRAK</description>
        <errorConditionFormula>AND( ISPICKVAL(Approval_Status__c, &apos;Approved&apos;),
OR ( 

ISCHANGED(Approver__c), 
ISCHANGED(Overall_Test_Comments__c), 
ISCHANGED(Status__c), 
ISCHANGED(Assigned_To__c), 
ISCHANGED(Sprint__c), 
ISCHANGED(Test_Outcome__c), 
ISCHANGED(Test_Phase__c), 
ISCHANGED(Description__c), 
ISCHANGED(Total_Steps__c),
ISCHANGED(Environment__c),
ISCHANGED(Introduction__c),
ISCHANGED(Template__c),
ISCHANGED(Test_Execution_Date__c),
ISCHANGED(Description__c),
ISCHANGED(User_Story__c)
) 
)</errorConditionFormula>
        <errorMessage>You can not make changes to an Approved Test Execution</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Pending_Approval_Status</fullName>
        <active>false</active>
        <description>TRAK - This validation rule will prevent the user from editing a Test Execution record if the Test Execution is in an &quot;Approved&quot;/&quot;Pending Approval status</description>
        <errorConditionFormula>AND(
OR (
ISPICKVAL(Approval_Status__c, &apos;Approved&apos;),
ISPICKVAL(Approval_Status__c, &apos;Pending Approval&apos;)
),
OR ( 
ISCHANGED(Approver__c), 
ISCHANGED(Overall_Test_Comments__c), 
ISCHANGED(Status__c), 
ISCHANGED(Assigned_To__c), 
ISCHANGED(Sprint__c), 
ISCHANGED(Test_Outcome__c), 
ISCHANGED(Test_Phase__c), 
ISCHANGED(Description__c), 
ISCHANGED(Total_Steps__c), 
ISCHANGED(Environment__c), 
ISCHANGED(Introduction__c), 
ISCHANGED(Template__c), 
ISCHANGED(Test_Execution_Date__c), 
ISCHANGED(Description__c), 
ISCHANGED(User_Story__c) 
) 
)</errorConditionFormula>
        <errorMessage>You cannot Edit a Test Execution if the Test Execution is in  &quot;Pending Approval/Approved&quot; status</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRAK_Approved_Status_Validation</fullName>
        <active>false</active>
        <errorConditionFormula>IF(ISPICKVAL(Approval_Status__c , &quot;Approved&quot;) &amp;&amp; ISCHANGED( Approver__c),true,false)</errorConditionFormula>
        <errorMessage>You cannot change Approver once the Test Execution is approved</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>TRAK_CannotSetYourselfAsApprover</fullName>
        <active>true</active>
        <description>TRAK - The logged in user cannot select himself / herself as the Approver on the Test Execution record</description>
        <errorConditionFormula>IF(NOT(ISBLANK(Approver__c))&amp;&amp; NOT(ISBLANK(Submitter__c)) &amp;&amp; Approver__c = Submitter__c,true,false)</errorConditionFormula>
        <errorMessage>The submitter can not be the approver of the Test Execution. Please select a valid user to approve the request.</errorMessage>
    </validationRules>
</CustomObject>